Se arreglan unos detalles de la app

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
 
-    <string name="app_name">conversor</string>
+    <string name="app_name">Conversor</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Conversor</string>
     <string name="binario">Binario</string>
     <string name="octal">Octal</string>
     <string name="hexadecimal">Hexadecimal</string>
     <string name="convertir">Convertir</string>
+    <string name="ingrese_el_numero_a_convertir">Ingrese el numero a convertir</string>
 
 </resources>
